Add program builder links to /about

--- a/src/about.html
+++ b/src/about.html
@@ -28,7 +28,8 @@
       <nav class="top-nav">
         <ul class="top-nav-menu">
           <li><a href="/">App</a></li>
-          <li><a href="/docs/docs.html">Documentation</a></li>
+          <li><a href="/docs/docs.html">Docs</a></li>
+          <li><a href="/program">Program Builder</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="https://github.com/astashov/liftosaur">Github</a></li>
         </ul>
@@ -51,7 +52,7 @@
               <img src="/images/logo.svg" alt="Liftosaur Logo" />
               <div class="hero-title-right">
                 <h1>Liftosaur</h1>
-                <h3>Weighlifting app for serious lifters.</h3>
+                <h3>Weighlifting tracker app <strong>for coders.</strong></h3>
               </div>
             </a>
             <p>
@@ -326,7 +327,8 @@ if (state.failures > 2) {
             <nav>
               <ul class="footer-menu">
                 <li><a href="/">App</a></li>
-                <li><a href="/docs/docs.html">Documentation</a></li>
+                <li><a href="/docs/docs.html">Docs</a></li>
+                <li><a href="/program">Program Builder</a></li>
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/terms.html">Terms &amp; Conditions</a></li>
                 <li><a href="/privacy.html">Privacy</a></li>
