Add web editor to /about page

--- a/src/about.html
+++ b/src/about.html
@@ -279,6 +279,22 @@ if (state.failures > 2) {
             </div>
           </div>
         </li>
+        <li class="features-center">
+          <div class="features-content">
+            <div class="features-content-data">
+              <h4>Web Editor</h4>
+              <p>
+                Typing code on a phone could be tedious, so there's a <a href="/program">web editor</a>. Create a
+                program in the web editor, then copy the link, and paste it in the app to import the program.
+              </p>
+            </div>
+          </div>
+          <div class="features-image">
+            <div class="features-image-content">
+              <img src="/images/web-editor.png" alt="Web Editor screenshot" />
+            </div>
+          </div>
+        </li>
       </ul>
     </section>
     <section class="final">
