--- a/src/about.html
+++ b/src/about.html
@@ -348,6 +348,7 @@ if (state.failures > 2) {
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/terms.html">Terms &amp; Conditions</a></li>
                 <li><a href="/privacy.html">Privacy</a></li>
+                <li><a href="/affiliates">Affiliate Program</a></li>
               </ul>
               <ul class="footer-social">
                 <li>
