Add discord server

--- a/src/about.html
+++ b/src/about.html
@@ -43,6 +43,9 @@
           <li>
             <a target="_blank" href="https://www.reddit.com/r/liftosaur" class="logo-reddit"><span>Reddit</span></a>
           </li>
+          <li>
+            <a target="_blank" href="https://discord.gg/AAh3cvdBRs" class="logo-discord"><span>Discord</span></a>
+          </li>
         </ul>
       </nav>
       <section class="hero-section">
@@ -365,6 +368,9 @@ if (state.failures > 2) {
                   <a target="_blank" href="https://www.reddit.com/r/liftosaur" class="logo-reddit"
                     ><span>Reddit</span></a
                   >
+                </li>
+                <li>
+                  <a target="_blank" href="https://discord.gg/AAh3cvdBRs" class="logo-discord"><span>Discord</span></a>
                 </li>
               </ul>
             </nav>
