--- a/src/about.html
+++ b/src/about.html
@@ -30,6 +30,7 @@
           <li><a href="/">App</a></li>
           <li><a href="/docs/docs.html">Docs</a></li>
           <li><a href="/program">Program Builder</a></li>
+          <li><a href="/planner">Program Planner</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="https://github.com/astashov/liftosaur">Github</a></li>
         </ul>
@@ -344,14 +345,19 @@ if (state.failures > 2) {
           </div>
           <div class="footer-right">
             <nav>
-              <ul class="footer-menu">
-                <li><a href="/">App</a></li>
-                <li><a href="/docs/docs.html">Docs</a></li>
-                <li><a href="/program">Program Builder</a></li>
-                <li><a href="/blog">Blog</a></li>
-                <li><a href="/terms.html">Terms &amp; Conditions</a></li>
-                <li><a href="/privacy.html">Privacy</a></li>
-                <li><a href="/affiliates">Affiliate Program</a></li>
+              <div class="footer-menu">
+                <ul>
+                  <li><a href="/">App</a></li>
+                  <li><a href="/docs/docs.html">Docs</a></li>
+                  <li><a href="/program">Program Builder</a></li>
+                  <li><a href="/planner">Program Planner</a></li>
+                </ul>
+                <ul>
+                  <li><a href="/blog">Blog</a></li>
+                  <li><a href="/terms.html">Terms &amp; Conditions</a></li>
+                  <li><a href="/privacy.html">Privacy</a></li>
+                  <li><a href="/affiliates">Affiliate Program</a></li>
+                </ul>
               </ul>
               <ul class="footer-social">
                 <li>
