Add a program description on /program/arnoldsixgolden

--- a/src/about.html
+++ b/src/about.html
@@ -175,6 +175,7 @@ if (state.failures > 2) {
         <li><a target="_blank" href="/programs/ss1">Starting Strength</a></li>
         <li><a target="_blank" href="/programs/strongcurves1">Strong Curves</a></li>
         <li><a target="_blank" href="/programs/texasmethod">Texas Method</a></li>
+        <li><a target="_blank" href="/programs/arnoldgoldensix">Arnold Schwarzenegger's Golden Six</a></li>
       </ul>
       <p class="programs-more">And of course you can build your own program as well!</p>
     </section>
