Add program details page for the GZCL: The Rippler program

--- a/src/about.html
+++ b/src/about.html
@@ -170,6 +170,7 @@ if (state.failures > 2) {
         <li><a target="_blank" href="/programs/basicBeginner">Fitness Basic Beginner Program</a></li>
         <li><a target="_blank" href="/programs/dbPpl">Dumbbell PPL</a></li>
         <li><a target="_blank" href="/programs/gzclp">GZCLP</a></li>
+        <li><a target="_blank" href="/programs/gzcl-the-rippler">GZCL: The Rippler</a></li>
         <li><a target="_blank" href="/programs/lylegenericbulking">Lyle's Generic Bulking</a></li>
         <li><a target="_blank" href="/programs/metallicadpappl">Metallicadpa PPL</a></li>
         <li><a target="_blank" href="/programs/ss1">Starting Strength</a></li>
