--- a/src/about.html
+++ b/src/about.html
@@ -173,6 +173,7 @@ if (state.failures > 2) {
         <li><a target="_blank" href="/programs/gzcl-the-rippler">GZCL: The Rippler</a></li>
         <li><a target="_blank" href="/programs/gzcl-jacked-and-tan-2">GZCL: Jacked And Tan 2.0</a></li>
         <li><a target="_blank" href="/programs/gzcl-uhf-9-weeks">GZCL: UHF (Ultra High Frequency) 9 weeks</a></li>
+        <li><a target="_blank" href="/programs/gzcl-uhf-5-weeks">GZCL: UHF (Ultra High Frequency) 5 weeks</a></li>
         <li><a target="_blank" href="/programs/gzcl-vdip">GZCL: VDIP (Volume-Dependent Intensity Progression)</a></li>
         <li><a target="_blank" href="/programs/gzcl-general-gainz">GZCL: General Gainz</a></li>
         <li><a target="_blank" href="/programs/lylegenericbulking">Lyle's Generic Bulking</a></li>
