--- a/src/about.html
+++ b/src/about.html
@@ -36,7 +36,7 @@
         </ul>
         <ul class="top-nav-social">
           <li>
-            <a target="_blank" href="https://www.facebook.com/liftosaur" class="logo-facebook"><span>Facebook</span></a>
+            <a target="_blank" href="https://www.instagram.com/liftosaurapp" class="logo-instagram"><span>Instagram</span></a>
           </li>
           <li>
             <a target="_blank" href="https://www.twitter.com/liftosaur" class="logo-twitter"><span>Twitter</span></a>
@@ -368,8 +368,8 @@ if (state.failures > 2) {
               </ul>
               <ul class="footer-social">
                 <li>
-                  <a target="_blank" href="https://www.facebook.com/liftosaur" class="logo-facebook"
-                    ><span>Facebook</span></a
+                  <a target="_blank" href="https://www.instagram.com/liftosaurapp" class="logo-instagram"
+                    ><span>Instagram</span></a
                   >
                 </li>
                 <li>
