Add alias to root page - /app

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Liftosaur: Weight Lifting Tracking App</title>
-    <link rel="stylesheet" type="text/css" href="main.css?version=xxxxxxxx" />
-    <link rel="stylesheet" type="text/css" href="vendors.css?vendor=xxxxxxxx" />
+    <link rel="stylesheet" type="text/css" href="/main.css?version=xxxxxxxx" />
+    <link rel="stylesheet" type="text/css" href="/vendors.css?vendor=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="preconnect" href="https://api2.liftosaur.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
@@ -54,7 +54,7 @@
   <body>
     <div id="app"></div>
     <noscript>JavaScript is required for Liftosaur to work</noscript>
-    <script src="vendors.js?vendor=xxxxxxxx"></script>
-    <script src="main.js?version=xxxxxxxx"></script>
+    <script src="/vendors.js?vendor=xxxxxxxx"></script>
+    <script src="/main.js?version=xxxxxxxx"></script>
   </body>
 </html>
