Add planner to all the pages

--- a/src/about.html
+++ b/src/about.html
@@ -27,10 +27,11 @@
     <div class="hero">
       <nav class="top-nav">
         <ul class="top-nav-menu">
-          <li><a href="/">App</a></li>
+          <li><strong>About</strong></li>
           <li><a href="/docs/docs.html">Docs</a></li>
-          <li><a href="/program">Program Builder</a></li>
           <li><a href="/blog">Blog</a></li>
+          <li><a href="/program">Web Editor</a></li>
+          <li><a href="/planner">Workout Planner</a></li>
           <li><a href="https://github.com/astashov/liftosaur">Github</a></li>
         </ul>
         <ul class="top-nav-social">
@@ -289,7 +290,7 @@ if (state.failures > 2) {
             </div>
           </div>
         </li>
-        <li class="features-center">
+        <li class="features-center feature-web-editor">
           <div class="features-content">
             <div class="features-content-data">
               <h4>Web Editor</h4>
@@ -302,6 +303,27 @@ if (state.failures > 2) {
           <div class="features-image">
             <div class="features-image-content">
               <img src="/images/web-editor.png" alt="Web Editor screenshot" />
+            </div>
+          </div>
+        </li>
+        <li class="features-center">
+          <div class="features-content">
+            <div class="features-content-data">
+              <h4>Workout Planner</h4>
+              <p>
+                <strong>❗ New! ❗</strong> Build your workouts in a
+                <a href="/planner">Workout Planner</a> - a "weightlifting IDE",
+                with autocompletion and syntax highlighting, that shows your
+                weekly volume per muscle group and allows to balance it with
+                time spent in gym. You can also use it to build multi-week
+                programs, with mesocycles, deload weeks, 1RM measurement weeks,
+                etc.
+              </p>
+            </div>
+          </div>
+          <div class="features-image">
+            <div class="features-image-content">
+              <img src="/images/workout-planner.png" alt="Web Editor screenshot" />
             </div>
           </div>
         </li>
@@ -353,9 +375,10 @@ if (state.failures > 2) {
             <nav>
               <div class="footer-menu">
                 <ul>
-                  <li><a href="/">App</a></li>
+                  <li><a href="/">Web App</a></li>
                   <li><a href="/docs/docs.html">Docs</a></li>
-                  <li><a href="/program">Program Builder</a></li>
+                  <li><a href="/program">Web Editor</a></li>
+                  <li><a href="/planner">Workout Planner</a></li>
                 </ul>
                 <ul>
                   <li><a href="/blog">Blog</a></li>
