Update links to /app

--- a/src/about.html
+++ b/src/about.html
@@ -96,7 +96,7 @@
               <div class="content-cta-row content-cta-row-bottom">
                 <span class="content-cta-row-or">or</span>
                 &nbsp;
-                <a href="/" target="_blank" class="content-cta-button">use as a web app</a>
+                <a href="/app" target="_blank" class="content-cta-button">use as a web app</a>
               </div>
             </div>
           </div>
@@ -357,7 +357,7 @@ if (state.failures > 2) {
         <div class="content-cta-row content-cta-row-bottom">
           <span class="content-cta-row-or">or</span>
           &nbsp;
-          <a href="/" target="_blank" class="content-cta-button">use as a web app</a>
+          <a href="/app" target="_blank" class="content-cta-button">use as a web app</a>
         </div>
       </div>
     </section>
@@ -375,7 +375,7 @@ if (state.failures > 2) {
             <nav>
               <div class="footer-menu">
                 <ul>
-                  <li><a href="/">Web App</a></li>
+                  <li><a href="/app">Web App</a></li>
                   <li><a href="/docs/docs.html">Docs</a></li>
                   <li><a href="/program">Web Editor</a></li>
                   <li><a href="/planner">Workout Planner</a></li>
