Reformulate some sentences

--- a/src/about.html
+++ b/src/about.html
@@ -60,14 +60,14 @@
               </div>
             </a>
             <p>
-              The most powerful weightlifting app ever. Build weighlifting programs, with any progression and deloading
-              logic, be in control of your progress.
+              The most powerful weightlifting app ever: Build weightlifting programs with any progression and deloading
+              logic, and be in control of your progress.
             </p>
             <p>
               Or choose one of the existing programs, like
               <a href="https://thefitness.wiki/routines/gzclp/" target="_blank">GZCLP</a> or
-              <a href="https://thefitness.wiki/5-3-1-primer/" target="_blank">5/3/1</a> that helped thousands of lifters
-              to get bigger and stronger.
+              <a href="https://thefitness.wiki/5-3-1-primer/" target="_blank">5/3/1</a>, that have helped thousands of lifters
+              get bigger and stronger.
             </p>
             <div class="content-cta">
               <div class="content-cta-row">
@@ -113,33 +113,35 @@
     <section class="intro">
       <h2>Summary</h2>
       <p>
-        One of the most important concepts in weight lifting is <strong>progressive overload</strong>. It means that you
-        should constantly challenge yourself by increating the weights or number of reps, and your body would respond to
-        it by getting stronger and bigger.
+        One of the most important concepts in weightlifting is <strong>progressive overload</strong>. This means
+        constantly challenging yourself by increasing weights or the number of reps. Your body responds to this
+        challenge by getting stronger and bigger.
       </p>
 
       <p>
-        When you start lifting, you can increase the weights every week, but in several months you will reach a point
-        where you can't increase the weights so often. That's when you need to switch to a new program, try new patterns
-        of periodically adding and reducing weight. There's a lot of various programs created by experienced
-        weighlifters, who found ways to keep progressing. There're
+        Initially, when you start lifting, you can increase weights every week. However, after several months, you
+        may reach a point where increasing weights becomes more challenging. This is when it's beneficial to switch
+        to a new program that incorporates different patterns of periodically adding and reducing weight. There are
+        various programs created by experienced weightlifters who have discovered ways to ensure continued progress.
+        Examples include
         <a href="https://thefitness.wiki/routines/gzclp/" target="_blank">GZCLP by Cody LeFever</a>,
         <a href="https://thefitness.wiki/5-3-1-primer/" target="_blank">5/3/1 by Jim Wendler</a>,
-        <a href="https://thefitness.wiki/routines/nsuns-lp/" target="_blank">nSuns LP by u/nSuns</a> - different people
-        like different programs, and different programs work differently for different people.
+        and <a href="https://thefitness.wiki/routines/nsuns-lp/" target="_blank">nSuns LP by u/nSuns.</a>
+        Different individuals have different preferences and what works for one person may not work for another.
       </p>
 
       <p>
-        Liftosaur allows you to try all those programs, modify them, and keep track of your progress no matter what
-        program you use. It's a companion of your weightlifting journey, and it is there for a long run. It defines all
-        those programs using built-in scripting language <a href="/docs/docs.html"><strong>Liftoscript</strong></a
-        >, which is a very simple scripting language, that looks like JavaScript.
+        Liftosaur allows you to try out these programs, modify them, and keep track of your progress regardless of the
+        program you choose. It serves as a companion throughout your weightlifting journey and is designed for the long
+        term. All these programs are defined using <a href="/docs/docs.html"><strong>Liftoscript</strong></a
+        >, a simple scripting language that resembles JavaScript.
       </p>
 
       <p>
-        You don't have to use or know about it, you can stick to built-in programs, but with it you can tailor the
-        programs for you. E.g. Squats progression and deload logic in Stronglifts 5x5 could be expressed in
-        <strong>Liftoscript</strong> as:
+        You don't necessarily have to use or be familiar with Liftoscript. You can stick to the built-in programs.
+        However, with Liftoscript, you have the ability to tailor the programs to your specific needs. For example,
+        the squat progression and deload logic in Stronglifts 5x5 can be expressed in
+        <strong>Liftoscript</strong> as follows:
       </p>
 
       <pre><code class="code language-javascript">
@@ -155,10 +157,10 @@ if (state.failures > 2) {
 </code>
 </pre>
       <p>
-        And you can modify it in any way you want. E.g. you may change increments to 2.5lb, change max number of
-        failures to 5, you may completely change the logic to anything you want. You have access to completed sets,
-        reps, weights, you can create any state variables you want. There's a bunch of example programs written in the
-        same Liftoscript language from
+        And you have the flexibility to modify it in any way you desire. For example, you can adjust the increments
+        to 2.5lb, change the maximum number of failures to 5, or completely customize the logic according to your
+        preferences. You have access to completed sets, reps, weights, and you can create any state variable you want.
+        There are a bunch of example programs written in the same Liftoscript language from
         <a href="https://thefitness.wiki/" target="_blank">thefitness.wiki</a>.
       </p>
       <p class="intro-more">Read more or watch the video tutorial in <a href="/docs/docs.html">Documentation</a></p>
@@ -183,7 +185,7 @@ if (state.failures > 2) {
         <li><a target="_blank" href="/programs/texasmethod">Texas Method</a></li>
         <li><a target="_blank" href="/programs/arnoldgoldensix">Arnold Schwarzenegger's Golden Six</a></li>
       </ul>
-      <p class="programs-more">And of course you can build your own program as well!</p>
+      <p class="programs-more">And of course you can build your own programs as well!</p>
     </section>
     <section class="features">
       <h2>Features</h2>
@@ -192,7 +194,10 @@ if (state.failures > 2) {
           <div class="features-content">
             <div class="features-content-data">
               <h4>Built-in workout programs</h4>
-              <p>Choose from multiple precreated workouts, that helped thousands of Reddit lifters become stronger.</p>
+              <p>
+                Choose from a variety of precreated workouts that have proven to be effective in helping thousands of
+                Reddit lifters become stronger.
+              </p>
             </div>
           </div>
           <div class="features-image">
@@ -205,7 +210,7 @@ if (state.failures > 2) {
           <div class="features-content">
             <div class="features-content-data">
               <h4>Workout history</h4>
-              <p>All your workouts will be recorded, and you'll be able to edit any recorded workout.</p>
+              <p>All your workouts will be recorded, and you will have the ability to edit any recorded workout as needed.</p>
             </div>
           </div>
           <div class="features-image">
@@ -219,7 +224,8 @@ if (state.failures > 2) {
             <div class="features-content-data">
               <h4>Tracking workout progress</h4>
               <p>
-                Log all the sets you accomplished. Also, there's rest timer and plates calculator for your convenience.
+                You can log all the sets you accomplish in your workouts. Additionally, the app provides a rest timer
+                and a plates calculator for your convenience.
               </p>
             </div>
           </div>
@@ -239,7 +245,12 @@ if (state.failures > 2) {
           <div class="features-content">
             <div class="features-content-data">
               <h4>Custom workouts</h4>
-              <p>You can customize any workout in any way you want, and also create yours.</p>
+              <p>
+                You have the ability to customize any workout in any way you
+                want and create your own workout routines. The app allows for
+                complete flexibility and personalization to suit your individual
+                needs and preferences.
+              </p>
             </div>
           </div>
           <div class="features-image">
@@ -252,7 +263,11 @@ if (state.failures > 2) {
           <div class="features-content">
             <div class="features-content-data">
               <h4>Add any logic to your workouts</h4>
-              <p>Using built-in script language, you can customize progressions and deloads in any way you want.</p>
+              <p>
+                With the built-in scripting language, you can customize progressions and deloads in any way
+                you want. This gives you the freedom to personalize your training program according to your specific
+                goals and preferences.
+              </p>
             </div>
           </div>
           <div class="features-image">
@@ -265,7 +280,11 @@ if (state.failures > 2) {
           <div class="features-content">
             <div class="features-content-data">
               <h4>Cloud Storage</h4>
-              <p>If you log in using your Google account, your history will be stored in the cloud.</p>
+              <p>
+                If you log in using your Google or Apple account, your workout history will be securely stored in the
+                cloud. This enables you to access your records from any device, ensuring that your progress is always
+                backed up and synchronized across multiple platforms.
+              </p>
             </div>
           </div>
           <div class="features-image">
@@ -281,7 +300,12 @@ if (state.failures > 2) {
           <div class="features-content">
             <div class="features-content-data">
               <h4>Graphs</h4>
-              <p>You can visually check your progress on main lifts.</p>
+              <p>
+                You can visually track your progress on main lifts using graphs. These graphs provide a clear and
+                visual representation of your progress over time, allowing you to easily monitor and analyze your
+                performance on key lifts. This feature helps you identify trends, set goals, and make informed
+                adjustments to your training routine.
+              </p>
             </div>
           </div>
           <div class="features-image">
@@ -295,8 +319,10 @@ if (state.failures > 2) {
             <div class="features-content-data">
               <h4>Web Editor</h4>
               <p>
-                Typing code on a phone could be tedious, so there's a <a href="/program">web editor</a>. Create a
-                program in the web editor, then copy the link, and paste it in the app to import the program.
+                Typing code on a phone can indeed be tedious. To ease this process, there is a
+                <a href="/program">web editor</a> available. You can create a program using the web editor, then copy
+                the generated link. Later, you can paste this link in the app to import the program directly. This
+                allows for a smoother and more convenient way to create and import programs into the app.
               </p>
             </div>
           </div>
@@ -311,13 +337,12 @@ if (state.failures > 2) {
             <div class="features-content-data">
               <h4>Workout Planner</h4>
               <p>
-                <strong>❗ New! ❗</strong> Build your workouts in a
-                <a href="/planner">Workout Planner</a> - a "weightlifting IDE",
-                with autocompletion and syntax highlighting, that shows your
-                weekly volume per muscle group and allows to balance it with
-                time spent in gym. You can also use it to build multi-week
-                programs, with mesocycles, deload weeks, 1RM measurement weeks,
-                etc.
+                <strong>❗ New! ❗</strong> You can easily build your workouts using the
+                <a href="/planner">Workout Planner</a> - a "weightlifting IDE" that offers autocompletion, syntax
+                highlighting, and a range of helpful features. This tool allows you to plan your workouts, including
+                multi-week programs with mesocycles, deload weeks, 1RM measurement weeks, and more. The Workout Planner
+                also provides valuable insights, such as your weekly volume per muscle group, allowing you to balance
+                your training effectively.
               </p>
             </div>
           </div>
