Move about page to the root URL

--- a/src/about.html
+++ b/src/about.html
@@ -24,6 +24,7 @@
     />
   </head>
   <body>
+    <div id="about-disclaimer"></div>
     <div class="hero">
       <nav class="top-nav">
         <ul class="top-nav-menu">
@@ -439,5 +440,6 @@ if (state.failures > 2) {
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.21.0/components/prism-core.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.21.0/plugins/autoloader/prism-autoloader.min.js"></script>
+    <script src="/aboutexporter.js"></script>
   </body>
 </html>
