--- a/src/about.html
+++ b/src/about.html
@@ -87,7 +87,8 @@
                 <div class="content-cta-android">
                   <a
                     target="_blank"
-                    href="https://play.google.com/store/apps/details?id=com.liftosaur.www.twa&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
+                    class="google-play-link"
+                    href="https://play.google.com/store/apps/details?id=com.liftosaur.www.twa"
                     ><img
                       alt="Get it on Google Play"
                       src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
@@ -372,8 +373,9 @@ if (state.failures > 2) {
           </div>
           <div class="content-cta-android">
             <a
+              class="google-play-link"
               target="_blank"
-              href="https://play.google.com/store/apps/details?id=com.liftosaur.www.twa&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
+              href="https://play.google.com/store/apps/details?id=com.liftosaur.www.twa"
               ><img
                 alt="Get it on Google Play"
                 src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
