Update links to the App Store

--- a/src/about.html
+++ b/src/about.html
@@ -74,7 +74,8 @@
               <div class="content-cta-row">
                 <div class="content-cta-android">
                   <a
-                    href="https://apps.apple.com/us/app/liftosaur/id1661880849?itsct=apps_box_badge&amp;itscg=30200"
+                    class="apple-store-link"
+                    href="https://apps.apple.com/app/apple-store/id1661880849?pt=126680920&mt=8"
                     style="display: inline-block; overflow: hidden; border-radius: 13px; width: 165px; height: 55px;"
                   >
                     <img
@@ -361,7 +362,8 @@ if (state.failures > 2) {
         <div class="content-cta-row">
           <div class="content-cta-android">
             <a
-              href="https://apps.apple.com/us/app/liftosaur/id1661880849?itsct=apps_box_badge&amp;itscg=30200"
+              class="apple-store-link"
+              href="https://apps.apple.com/app/apple-store/id1661880849?pt=126680920&mt=8"
               style="display: inline-block; overflow: hidden; border-radius: 13px; width: 165px; height: 55px;"
             >
               <img
