Change message on the about page

--- a/src/about.html
+++ b/src/about.html
@@ -57,7 +57,7 @@
               <img src="/images/logo.svg" alt="Liftosaur Logo" />
               <div class="hero-title-right">
                 <h1>Liftosaur</h1>
-                <h3>Weighlifting tracker app <strong>for coders.</strong></h3>
+                <h3>Weighlifting tracker app <strong>for serious lifters.</strong></h3>
               </div>
             </a>
             <p>
