--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" type="text/css" href="/main.css?version=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="preconnect" href="https://api3.liftosaur.com" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi, height=device-height"
+    />
     <meta name="apple-itunes-app" content="app-id=1661880849" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="preload" href="/images/front-muscles.svg" as="image" />
