Rename old editor to 'legacy' editor

--- a/src/about.html
+++ b/src/about.html
@@ -31,8 +31,8 @@
           <li><strong>About</strong></li>
           <li><a href="/docs/docs.html">Docs</a></li>
           <li><a href="/blog">Blog</a></li>
-          <li><a href="/program">Web Editor</a></li>
-          <li><a href="/planner">Workout Planner</a></li>
+          <li><a href="/program">Legacy Web Editor</a></li>
+          <li><a href="/planner">Web Editor</a></li>
           <li><a href="https://github.com/astashov/liftosaur">Github</a></li>
         </ul>
         <ul class="top-nav-social">
@@ -408,8 +408,8 @@ if (state.failures > 2) {
                 <ul>
                   <li><a href="/app">Web App</a></li>
                   <li><a href="/docs/docs.html">Docs</a></li>
-                  <li><a href="/program">Web Editor</a></li>
-                  <li><a href="/planner">Workout Planner</a></li>
+                  <li><a href="/program">Legacy Web Editor</a></li>
+                  <li><a href="/planner">Web Editor</a></li>
                 </ul>
                 <ul>
                   <li><a href="/blog">Blog</a></li>
