--- a/src/record.html
+++ b/src/record.html
@@ -50,7 +50,7 @@
         </div>
         <ul class="top-nav-menu">
           <li><a href="/">App</a></li>
-          <li><a href="/docs/docs.html">Documentation</a></li>
+          <li><a href="/docs">Documentation</a></li>
           <li><a href="/blog">Blog</a></li>
         </ul>
         <ul class="top-nav-social">
@@ -75,7 +75,7 @@
               <nav>
                 <ul class="footer-menu">
                   <li><a href="/">App</a></li>
-                  <li><a href="/docs/docs.html">Documentation</a></li>
+                  <li><a href="/docs">Documentation</a></li>
                   <li><a href="/blog">Blog</a></li>
                   <li><a href="/terms.html">Terms &amp; Conditions</a></li>
                   <li><a href="/privacy.html">Privacy</a></li>
