--- a/src/about.html
+++ b/src/about.html
@@ -29,7 +29,7 @@
       <nav class="top-nav">
         <ul class="top-nav-menu">
           <li><strong>About</strong></li>
-          <li><a href="/docs/docs.html">Docs</a></li>
+          <li><a href="/docs">Docs</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="/program">Legacy Web Editor</a></li>
           <li><a href="/planner">Web Editor</a></li>
@@ -136,7 +136,7 @@
       <p>
         Liftosaur allows you to try out these programs, modify them, and keep track of your progress regardless of the
         program you choose. It serves as a companion throughout your weightlifting journey and is designed for the long
-        term. All these programs are defined using <a href="/docs/docs.html"><strong>Liftoscript</strong></a
+        term. All these programs are defined using <a href="/docs"><strong>Liftoscript</strong></a
         >, a simple scripting language that resembles JavaScript.
       </p>
 
@@ -166,7 +166,7 @@ if (state.failures > 2) {
         There are a bunch of example programs written in the same Liftoscript language from
         <a href="https://thefitness.wiki/" target="_blank">thefitness.wiki</a>.
       </p>
-      <p class="intro-more">Read more or watch the video tutorial in <a href="/docs/docs.html">Documentation</a></p>
+      <p class="intro-more">Read more or watch the video tutorial in <a href="/docs">Documentation</a></p>
     </section>
     <section class="programs">
       <h2>Built-in workout programs</h2>
@@ -407,7 +407,7 @@ if (state.failures > 2) {
               <div class="footer-menu">
                 <ul>
                   <li><a href="/app">Web App</a></li>
-                  <li><a href="/docs/docs.html">Docs</a></li>
+                  <li><a href="/docs">Docs</a></li>
                   <li><a href="/program">Legacy Web Editor</a></li>
                   <li><a href="/planner">Web Editor</a></li>
                 </ul>
