Redesign the landing page

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Liftosaur: Weight Lifting Tracking App</title>
-    <link rel="stylesheet" type="text/css" href="/main.css?version=xxxxxxxx" />
+    <link rel="stylesheet" type="text/css" href="/app.css?version=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="preconnect" href="https://api3.liftosaur.com" />
     <meta
@@ -57,6 +57,6 @@
     <div id="app"></div>
     <noscript>JavaScript is required for Liftosaur to work</noscript>
     <script src="/vendors.js?vendor=xxxxxxxx"></script>
-    <script src="/main.js?version=xxxxxxxx"></script>
+    <script src="/app.js?version=xxxxxxxx"></script>
   </body>
 </html>
