Fix some SEO errors on the pages

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/app.css?version=xxxxxxxx" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="preconnect" href="https://api3.liftosaur.com" />
+    <link rel="canonical" href="https://www.liftosaur.com/app" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi, height=device-height"
@@ -19,9 +20,9 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="A weight lifting tracking app, that allows you to follow popular weight lifting routines"
+      content="Weightlifting tracker and weightlifting planner app, offers extreme customizability, and allows you to follow popular lifting routines"
     />
-    <meta property="og:title" content="Liftosaur: Weightlifting Tracking App" />
+    <meta property="og:title" content="Liftosaur: Weightlifting Tracker And Planner App" />
     <meta
       property="og:description"
       content="Webapp for tracking weightlifting progress, with built-in progressive overload routines."
