Add health connect privacy to privacy.html

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -379,5 +379,44 @@
       This privacy policy was created using
       <a href="https://termly.io/products/privacy-policy-generator/?ftseo">Termly's Privacy Policy Generator</a>.
     </p>
-  </body>
+
+    <h2>HEALTH CONNECT INTEGRATION</h2>
+    <p>
+      Our app integrates with Health Connect to access and store specific health-related data, including body weight and
+      body fat. Here's how we handle this data:
+    </p>
+
+    <h3>1. Data Collection</h3>
+    <p>
+      We collect Health Connect data through the Health Connect integration to enhance the app's
+      functionality. This data is used solely for tracking and providing insights within the app.
+    </p>
+
+    <h3>2. Data Storage</h3>
+    <p>
+      The collected data is stored locally on your device and in the cloud on our servers. We implement strict
+      security measures to protect this data from unauthorized access, ensuring it is stored safely and securely.
+    </p>
+
+    <h3>3. Data Usage</h3>
+    <p>
+      The data collected from Health Connect is not used for any purpose other than to provide app functionality. We do
+      not use this data for marketing or advertising.
+    </p>
+
+    <h3>4. Data Sharing</h3>
+    <p>
+      We do not share, sell, or disclose your health data to third parties. Your data is private and is only accessible
+      within the app for your use.
+    </p>
+
+    <h3>5. User Control</h3>
+    <p>
+      You retain control over your data. You can choose to delete or update your body weight and body fat data at any
+      time within the app. If you wish to delete your data stored on our servers, you can request this through the app's
+      settings</a>.
+    </p>
+
+    <h3>6. Compliance</h3>
+    <p>We comply with all applicable privacy laws and regulations related to the use and storage of health data.</p>
 </html>
